--- a/iStoreFX/src/main/resources/com/example/istorefx/store.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/store.fxml
@@ -13,7 +13,7 @@
       <AnchorPane layoutY="113.0" prefHeight="506.0" prefWidth="730.0">
          <children>
             <ScrollBar fx:id="_scrollBar" layoutX="203.0" layoutY="459.0" prefHeight="14.0" prefWidth="324.0" style="-fx-background-color: 0;" />
-            <GridPane fx:id="_gridPane" gridLinesVisible="true" hgap="20.0" layoutX="-646.0" layoutY="24.0" prefHeight="418.0" prefWidth="1198.0" vgap="10.0">
+            <GridPane fx:id="_gridPane" hgap="20.0" layoutX="-646.0" layoutY="24.0" prefHeight="418.0" prefWidth="1198.0" vgap="10.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -52,6 +52,8 @@
             <Button layoutX="34.0" layoutY="69.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="My cart" textFill="#fafafa" />
             <Button layoutX="34.0" layoutY="109.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Favorites" textFill="#fafafa" />
             <Button layoutX="34.0" layoutY="148.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Account" textFill="#fafafa" />
+            <Separator layoutX="34.0" layoutY="221.0" prefHeight="0.0" prefWidth="114.0" />
+            <Button layoutX="34.0" layoutY="194.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Disconnect" textFill="#fafafa" />
          </children>
       </AnchorPane>
    </children>
