--- a/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.istorefx.ShopController">
@@ -15,7 +16,7 @@
          <children>
             <AnchorPane prefHeight="98.0" prefWidth="730.0" style="-fx-background-color: #ffffffff;">
                <children>
-                  <Label fx:id="_storeName" alignment="CENTER" layoutX="305.0" layoutY="31.0" text="StoreName" textAlignment="CENTER">
+                  <Label fx:id="_storeName" alignment="CENTER" layoutX="34.0" layoutY="14.0" text="StoreName" textAlignment="CENTER">
                      <font>
                         <Font size="24.0" />
                      </font>
@@ -24,7 +25,13 @@
             </AnchorPane>
             <ScrollPane layoutY="163.0" prefHeight="341.0" prefWidth="730.0">
                <content>
-                  <Circle fill="DODGERBLUE" radius="196.0" stroke="BLACK" strokeType="INSIDE" />
+                  <GridPane fx:id="_gridPane" prefHeight="144.0" prefWidth="724.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                  </GridPane>
                </content>
             </ScrollPane>
          </children>
