--- a/iStoreFX/src/main/resources/com/example/istorefx/AdminView.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AdminView.fxml
@@ -47,15 +47,22 @@
             </Button>
             <AnchorPane fx:id="_CreateStorePane" layoutX="61.0" layoutY="99.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
                <children>
-                  <TextField fx:id="storeNameField" layoutX="100.0" layoutY="94.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the store name" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutY="14.0" prefHeight="52.0" prefWidth="478.0" text="Create a new store">
+                  <TextField fx:id="storeNameField" layoutX="100.0" layoutY="53.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the store name" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutY="1.0" prefHeight="52.0" prefWidth="478.0" text="Create a new store">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Button fx:id="_CreateStoreDisplayButton" layoutX="100.0" layoutY="163.0" mnemonicParsing="false" onAction="#CreateStore" prefHeight="52.0" prefWidth="278.0" text="Create" />
-                  <Label fx:id="storeNameError" layoutX="100.0" layoutY="129.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
+                  <Button fx:id="_CreateStoreDisplayButton" layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#CreateStore" prefHeight="40.0" prefWidth="278.0" text="Create" />
+                  <Label fx:id="storeNameError" layoutX="100.0" layoutY="87.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
                   <Button fx:id="_closeDisplayCreateStoreButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayCreateStore" prefHeight="15.0" prefWidth="58.0" text="Close" />
+                  <TextField fx:id="storeImgUrlField" layoutX="100.0" layoutY="139.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the url of your store image " />
+                  <Label fx:id="storeImgUrlError" layoutX="100.0" layoutY="173.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
+                  <Label fx:id="storeNameError11" alignment="BOTTOM_LEFT" contentDisplay="BOTTOM" layoutX="100.0" layoutY="105.0" prefHeight="34.0" prefWidth="278.0" text="Logos are displayed in 40x40px, &#10;please upload image with a resolution of 1:1" wrapText="true">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
          </children>
