--- a/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -25,7 +26,7 @@
             </AnchorPane>
             <ScrollPane layoutY="163.0" prefHeight="341.0" prefWidth="730.0">
                <content>
-                  <GridPane fx:id="_gridPane" prefHeight="144.0" prefWidth="724.0">
+                  <GridPane fx:id="_gridPane" hgap="10.0" prefHeight="144.0" prefWidth="724.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -33,6 +34,9 @@
                     </columnConstraints>
                   </GridPane>
                </content>
+               <padding>
+                  <Insets top="30.0" />
+               </padding>
             </ScrollPane>
          </children>
         </AnchorPane>
