--- a/iStoreFX/src/main/resources/com/example/istorefx/AdminView.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AdminView.fxml
@@ -30,7 +30,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="_viewWhitelistButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="109.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="194.0" text="View whitelist" textAlignment="CENTER">
+            <Button fx:id="_whitelistEmailButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="109.0" mnemonicParsing="false" onAction="#DisplayWhitelist" prefHeight="40.0" prefWidth="194.0" text="Whitelist an email" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
@@ -63,6 +63,19 @@
                         <Font size="10.0" />
                      </font>
                   </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="_whitelistPane" layoutX="71.0" layoutY="109.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;">
+               <children>
+                  <TextField fx:id="emailWhitelistField" layoutX="100.0" layoutY="87.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter an email" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutY="1.0" prefHeight="52.0" prefWidth="478.0" text="Whitelist an email">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#AddToWhiteList" prefHeight="40.0" prefWidth="278.0" text="Add to whitelist" />
+                  <Label fx:id="emailWhitelistError" layoutX="100.0" layoutY="121.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
+                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayWhitelist" prefHeight="15.0" prefWidth="58.0" text="Close" />
                </children>
             </AnchorPane>
          </children>
