--- a/iStoreFX/src/main/resources/com/example/istorefx/AllStores.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AllStores.fxml
@@ -61,10 +61,9 @@
                         <Label fx:id="_pseudoLabel" alignment="CENTER" layoutX="65.0" layoutY="81.0" text="Username" textAlignment="CENTER" textFill="WHITE" />
                         <Label fx:id="_emailLabel" alignment="CENTER" layoutX="64.0" layoutY="99.0" text="user email" textAlignment="CENTER" textFill="WHITE" />
                     </children></AnchorPane>
-                <Button fx:id="_homeButton" layoutX="100.0" layoutY="15.0" mnemonicParsing="false" onAction="#Home" prefHeight="74.0" prefWidth="121.0" style="-fx-background-color: #E7ECEF;" text="Home" />
-                <Button layoutX="234.0" layoutY="15.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="122.0" style="-fx-background-color: #E7ECEF;" text="Categories" />
-                <Button disable="true" layoutX="364.0" layoutY="15.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="114.0" style="-fx-background-color: #E7ECEF;" text="All Stores" />
-                <Button layoutX="491.0" layoutY="15.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="122.0" style="-fx-background-color: #E7ECEF;" text="button" />
+                <Button fx:id="_homeButton" layoutX="100.0" layoutY="15.0" mnemonicParsing="false" onAction="#Home" prefHeight="74.0" prefWidth="121.0" style="-fx-background-color: #E7ECEF;" />
+                <Button fx:id="_categoriesButton" layoutX="234.0" layoutY="15.0" mnemonicParsing="false" onAction="#Categories" prefHeight="74.0" prefWidth="122.0" style="-fx-background-color: #E7ECEF;" />
+                <Button fx:id="_allstoresButton" disable="true" layoutX="364.0" layoutY="15.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="114.0" style="-fx-background-color: #E7ECEF;" />
             </children></AnchorPane>
         <AnchorPane layoutX="730.0" layoutY="106.0" prefHeight="513.0" prefWidth="183.0" style="-fx-background-color: #274C77;">
             <children>
@@ -76,16 +75,5 @@
                 <Button layoutX="34.0" layoutY="194.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Disconnect" textFill="#fafafa" />
             </children>
         </AnchorPane>
-      <GridPane>
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
     </children>
 </AnchorPane>
