--- a/iStoreFX/src/main/resources/com/example/istorefx/AdminView.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AdminView.fxml
@@ -8,11 +8,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.istorefx.AdminController">
    <children>
-      <AnchorPane prefHeight="106.0" prefWidth="602.0" style="-fx-background-color: #E7ECEF;">
-         <children>
-            <Button fx:id="_backButton" layoutX="1.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="132.0" text="Back" />
-         </children>
-      </AnchorPane>
+      <AnchorPane prefHeight="106.0" prefWidth="602.0" style="-fx-background-color: #E7ECEF;" />
       <AnchorPane layoutY="106.0" prefHeight="466.0" prefWidth="602.0">
          <children>
             <Label contentDisplay="CENTER" layoutX="14.0" layoutY="9.0" prefHeight="52.0" prefWidth="221.0" text="Admin Dashboard">
@@ -25,12 +21,12 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <Button fx:id="_manageEmployeeButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="173.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="194.0" text="Manage employee" textAlignment="CENTER">
+            <Button fx:id="_whitelistEmailButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="109.0" mnemonicParsing="false" onAction="#DisplayWhitelist" prefHeight="40.0" prefWidth="194.0" text="Whitelist an email" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="_whitelistEmailButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="109.0" mnemonicParsing="false" onAction="#DisplayWhitelist" prefHeight="40.0" prefWidth="194.0" text="Whitelist an email" textAlignment="CENTER">
+            <Button fx:id="_manageEmployeeButton" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="173.0" mnemonicParsing="false" onAction="#DisplayManageEmployee" prefHeight="40.0" prefWidth="194.0" text="Manage employee" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
@@ -56,7 +52,7 @@
                   <Button fx:id="_CreateStoreDisplayButton" layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#CreateStore" prefHeight="40.0" prefWidth="278.0" text="Create" />
                   <Label fx:id="storeNameError" layoutX="100.0" layoutY="87.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
                   <Button fx:id="_closeDisplayCreateStoreButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayCreateStore" prefHeight="15.0" prefWidth="58.0" text="Close" />
-                  <TextField fx:id="storeImgUrlField" layoutX="100.0" layoutY="139.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the url of your store image " />
+                  <TextField fx:id="storeImgUrlField" layoutX="100.0" layoutY="139.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the url of your store image (optional) " />
                   <Label fx:id="storeImgUrlError" layoutX="100.0" layoutY="173.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
                   <Label fx:id="storeNameError11" alignment="BOTTOM_LEFT" contentDisplay="BOTTOM" layoutX="100.0" layoutY="105.0" prefHeight="34.0" prefWidth="278.0" text="Logos are displayed in 40x40px, &#10;please upload image with a resolution of 1:1" wrapText="true">
                      <font>
@@ -65,7 +61,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="_whitelistPane" layoutX="71.0" layoutY="109.0" prefHeight="258.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
+            <AnchorPane fx:id="_whitelistPane" layoutX="71.0" layoutY="101.0" prefHeight="266.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
                <children>
                   <TextField fx:id="emailWhitelistField" layoutX="100.0" layoutY="87.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter an email" />
                   <Label alignment="CENTER" contentDisplay="CENTER" layoutY="1.0" prefHeight="52.0" prefWidth="478.0" text="Whitelist an email">
@@ -76,6 +72,19 @@
                   <Button layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#AddToWhiteList" prefHeight="40.0" prefWidth="278.0" text="Add to whitelist" />
                   <Label fx:id="emailWhitelistError" layoutX="100.0" layoutY="121.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
                   <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayWhitelist" prefHeight="15.0" prefWidth="58.0" text="Close" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="_manageEmployeePane" layoutX="81.0" layoutY="99.0" prefHeight="266.0" prefWidth="478.0" style="-fx-background-color: #d3d3d3;" visible="false">
+               <children>
+                  <TextField fx:id="emailManageEmployeeField" layoutX="100.0" layoutY="87.0" prefHeight="34.0" prefWidth="278.0" promptText="Enter the email of a user" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutY="1.0" prefHeight="52.0" prefWidth="478.0" text="Manage Employee">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="100.0" layoutY="204.0" mnemonicParsing="false" onAction="#UpdateUser" prefHeight="40.0" prefWidth="278.0" text="Update account" />
+                  <Label fx:id="emailManageEmployeeError" layoutX="100.0" layoutY="121.0" prefHeight="18.0" prefWidth="266.0" style="-fx-text-fill: #be4d25;" />
+                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseDisplayManageEmployee" prefHeight="15.0" prefWidth="58.0" text="Close" />
                </children>
             </AnchorPane>
          </children>
