--- a/iStoreFX/src/main/resources/com/example/istorefx/AllStores.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/AllStores.fxml
@@ -17,11 +17,11 @@
     <children>
         <AnchorPane layoutY="113.0" prefHeight="506.0" prefWidth="730.0">
          <children>
-            <AnchorPane prefHeight="506.0" prefWidth="730.0">
+            <AnchorPane prefHeight="506.0" prefWidth="730.0" style="-fx-background-color: #ffffff;">
                <children>
-                  <ScrollPane layoutX="14.0" layoutY="122.0" prefHeight="358.0" prefWidth="700.0">
+                  <ScrollPane layoutX="14.0" layoutY="122.0" prefHeight="358.0" prefWidth="700.0" style="-fx-background-color: transparent; -fx-border-color: #A3CEF1; -fx-background-radius: 5; -fx-border-radius: 5;">
                      <content>
-                        <GridPane fx:id="_gridPane" alignment="TOP_CENTER" hgap="30.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="358.0" prefWidth="643.0" vgap="20.0">
+                        <GridPane fx:id="_gridPane" alignment="TOP_CENTER" hgap="30.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="358.0" prefWidth="684.0" style="-fx-background-color: #ffffff;" vgap="20.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -36,17 +36,17 @@
                               <Insets />
                            </opaqueInsets>
                            <padding>
-                              <Insets left="40.0" />
+                              <Insets left="40.0" right="40.0" />
                            </padding>
                         </GridPane>
                      </content>
                   </ScrollPane>
-                  <Label layoutX="14.0" layoutY="14.0" text="All Stores">
+                  <Label layoutX="14.0" layoutY="7.0" text="All Stores">
                      <font>
                         <Font size="36.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="_searchBar" layoutX="14.0" layoutY="84.0" onKeyPressed="#displayStore" promptText="Search for a store..." />
+                  <TextField fx:id="_searchBar" layoutX="14.0" layoutY="70.0" onKeyPressed="#displayStore" prefHeight="40.0" prefWidth="231.0" promptText="Search for a store..." style="-fx-background-color: #ffffff; -fx-border-color: #A3CEF1; -fx-background-radius: 5; -fx-border-radius: 5;" />
                </children>
             </AnchorPane>
          </children></AnchorPane>
