--- a/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
@@ -29,7 +29,7 @@
             </AnchorPane>
             <ScrollPane layoutY="163.0" prefHeight="341.0" prefWidth="730.0">
                <content>
-                  <GridPane fx:id="_gridPane" hgap="10.0" prefHeight="144.0" prefWidth="724.0">
+                  <GridPane fx:id="_gridPane" hgap="10.0" prefHeight="311.0" prefWidth="730.0" style="-fx-background-color: #ffffff;">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -67,7 +67,7 @@
             </AnchorPane>
          </children>
         </AnchorPane>
-        <AnchorPane prefHeight="106.0" prefWidth="875.0" style="-fx-background-color: #E7ECEF;">
+        <AnchorPane prefHeight="106.0" prefWidth="875.0" style="-fx-background-color: #E7ECEF; -fx-border-color: #6096BA;">
             <children>
                 <AnchorPane layoutX="730.0" layoutY="-10.0" prefHeight="122.0" prefWidth="183.0" style="-fx-background-color: #274C77;">
                     <children>
