--- a/iStoreFX/src/main/resources/com/example/istorefx/store.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/store.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollBar?>
@@ -42,7 +43,7 @@
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="455.0" layoutX="648.0" layoutY="13.0" opacity="0.25" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="6.0" />
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="106.0" prefWidth="875.0" style="-fx-background-color: #E7ECEF; -fx-border-color: #6096BA;">
+      <AnchorPane layoutY="-1.0" prefHeight="106.0" prefWidth="915.0" style="-fx-background-color: #E7ECEF; -fx-border-color: #6096BA; -fx-border-width: 0 0 1 0;">
          <children>
             <Separator layoutX="378.0" layoutY="17.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
             <Separator layoutX="510.0" layoutY="17.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
@@ -62,7 +63,10 @@
                   <ImageView fx:id="_logoHeader" fitHeight="74.0" fitWidth="183.0" layoutX="39.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
-         </children></AnchorPane>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets></AnchorPane>
       <AnchorPane layoutX="730.0" layoutY="106.0" prefHeight="513.0" prefWidth="183.0" style="-fx-background-color: #274C77;">
          <children>
             <Separator layoutX="34.0" layoutY="136.0" prefHeight="0.0" prefWidth="114.0" />
