--- a/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
+++ b/iStoreFX/src/main/resources/com/example/istorefx/shop.fxml
@@ -78,7 +78,7 @@
             <Separator layoutX="380.0" layoutY="22.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
             <Separator layoutX="512.0" layoutY="22.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
             <Separator layoutX="638.0" layoutY="22.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
-            <Button fx:id="_homeButton" disable="true" layoutX="254.0" layoutY="24.0" mnemonicParsing="false" onAction="#Home" prefHeight="74.0" prefWidth="121.0" style="-fx-background-color: #E7ECEF;" />
+            <Button fx:id="_homeButton" layoutX="254.0" layoutY="24.0" mnemonicParsing="false" onAction="#Home" prefHeight="74.0" prefWidth="121.0" style="-fx-background-color: #E7ECEF;" />
             <Button fx:id="_categoriesButton" layoutX="388.0" layoutY="24.0" mnemonicParsing="false" onAction="#Categories" prefHeight="74.0" prefWidth="122.0" style="-fx-background-color: #E7ECEF;" />
             <Button fx:id="_allstoresButton" layoutX="518.0" layoutY="24.0" mnemonicParsing="false" onAction="#AllStores" prefHeight="74.0" prefWidth="114.0" style="-fx-background-color: #E7ECEF;" />
             <Separator layoutX="250.0" layoutY="24.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="6.0" />
@@ -91,7 +91,7 @@
                 <Button fx:id="AllUsersButton" layoutX="34.0" layoutY="109.0" mnemonicParsing="false" onAction="#AllUsers" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Other user" textFill="#fafafa" />
                 <Button fx:id="_accountButton" layoutX="34.0" layoutY="148.0" mnemonicParsing="false" onAction="#Account" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="My account" textFill="#fafafa" />
                 <Separator layoutX="34.0" layoutY="221.0" prefHeight="0.0" prefWidth="114.0" />
-                <Button layoutX="34.0" layoutY="194.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Disconnect" textFill="#fafafa" />
+                <Button fx:id="_disconnectButton" layoutX="34.0" layoutY="194.0" mnemonicParsing="false" onAction="#Disconnect" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #274C77;" text="Disconnect" textFill="#fafafa" />
             </children>
         </AnchorPane>
     </children>
